# Raspi-FaceDetection

./: CMakeLists.txt  FaceAPI.c  main.c
